TypedLama/regression/positive/test007.lama
local withClosure = fun (x) :: Int -> Int {
  fun (y :: Int) {
    2*x*y
  }
};
Unit