TypedLama/regression/compile_error/test005.3.lama
-- Haskell-style typing

-- Should not pass because of incompatible assignment
double :: Double -> Double;
local double = fun (x :: Int) :: Int -> Int {
  2*x
};